2000-08-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc: ctrl+alt+t now brings up a map for teleporting

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	objs.h: Fixed small leak in ~Frames_sequence()
	gamewin.cc: Fixed small leak in ~Game_window()

2000-08-21  Jeff Freedman  <jeff@amy.nerble.net>

	* Actors teleport to chairs if blocked.
	* Shortcuts:  f=feed, m=show map, b=open spellbook, w=use watch.

2000-08-21  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>

	* exult.cc, actors.cc: alt-G toggles God Mode, making your party
	invulnerable, and every strike lethal.

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	game.cc: Alt-X now quits the menu (same as the original), although a
	confirmation box is missing.

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.cc: wait_delay() now checks for events during delay, so that
	long delays don't cause events to be ignored until the next call.

2000-08-20  Jeff Freedman  <jeff@amy.nerble.net>

	* egg.cc,usecode.cc - Test'o Love somewhat works.

2000-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* Use center of barge as hot spot for moving.

2000-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* All books should work now.
	* Projectile-firing checks for clear path to target.
	* Another attempt to fix random-crash bug.
	* Fixed crashing bug with pirate S of Trinsic.

2000-08-14  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Lengthed distance in ::find_nearby from 16 to 24 so
	that first metal door in Deceit works.
	* Save/restore flag for being in 'barge' mode.

2000-08-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Several rendering changes.

2000-08-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed (I hope) 'hang' bug at end of menu screen.
	* Added 'dependors' field to Game_object.

2000-08-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Moved flags to objs.h.  Set 'okay_to_take' for containers and
	their members.