@@ -53,8 +53,11 @@ AC_PROG_CPP
 AC_PROG_INSTALL
 AM_PROG_LEX
 AC_PROG_YACC
-
 AM_CONDITIONAL(LEXYACC, test -n "$YACC")
+
+AC_CHECK_PROG(GIMPTOOL, gimptool, true, false)
+AM_CONDITIONAL(HAVE_GIMPTOOL, $GIMPTOOL)
+AC_SUBST(HAVE_GIMPTOOL)
 
 echo "Wondering what our windowing system is... "
 
@@ -207,6 +210,7 @@ AC_C_CONST
 AC_HEADER_TIME
 AC_STRUCT_TM
 AC_CHECK_BOOL
+
 
 dnl For the alternate allocator
 AC_ARG_ENABLE(alternate_allocator, [  --enable-alternate-allocator          enable alternate memory allocator [default no]],,alternate_allocator=no)
