@@ -17,4 +17,5 @@ ucclex.c
 uccparse.c
 expack
 txt2cc
+u7shpload
 *.tab.c
