@@ -1,11 +1,16 @@
+2000-08-22  Tristan Tarrant  <nadir@users.sourceforge.net>
+
+	* configure.in: Look for gimptool
+	* tools/u7shpload.c: GIMP plugin for loading U7 shapes
+
 2000-08-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 
 	* exult.cc: ctrl+alt+t now brings up a map for teleporting
 
 2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>
 
-	objs.h: Fixed small leak in ~Frames_sequence()
-	gamewin.cc: Fixed small leak in ~Game_window()
+	* objs.h: Fixed small leak in ~Frames_sequence()
+	* gamewin.cc: Fixed small leak in ~Game_window()
 
 2000-08-21  Jeff Freedman  <jeff@amy.nerble.net>
 
